--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           <img
             class="angular-img"
-            src="https://raw.githubusercontent.com/Angular-istic/angularistic/master/resources/images/angular-design.PNG"
+            src="resources/images/angular-design.PNG"
             alt="Angular design"
           />
         </div>
