--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex,
               tempora perspiciatis.
             </p>
-            <button class="btn-watch">
-              Watch &nbsp; <i class="ion-md-arrow-forward"></i>
+            <button class="btn-watch"><a href="pages/html-css.html">Watch &nbsp; <i class="ion-md-arrow-forward"></i></a>
             </button>
           </div>
         </div>
@@ -56,8 +55,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex,
               tempora perspiciatis.
             </p>
-            <button class="btn-watch">
-              Watch &nbsp; <i class="ion-md-arrow-forward"></i>
+            <button class="btn-watch"><a href="pages/html-css.html">Watch &nbsp; <i class="ion-md-arrow-forward"></i></a>
             </button>
           </div>
           <img
