--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Angularistic</title>
   </head>
   <body>
-    <header> 
+    <header>
       <nav>
         <div class="flex toolbar">
           <div class="main-name">ANGULARISTIC</div>
@@ -24,12 +24,25 @@
       </nav>
     </header>
     <section>
+      </div>
       <div class="main-desc">
-        <h2>
-          Angularistic features angular tutorial on creating customizable UI
-          library
-        </h2>
-        <button class="btn-main-desc ripple">Let's Go</button>
+        <div class="desc-section">
+          <h2>
+            Angularistic features angular tutorial on creating customizable UI
+            library
+          </h2>
+          <button class="btn-main-desc ripple">Let's Go</button>
+        </div>
+        <div class="cube-section">
+          <div class="cube">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
       </div>
       <div class="category">
         <div class="html-css-design flex">
@@ -55,7 +68,8 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex,
               tempora perspiciatis.
             </p>
-            <button class="btn-watch"><a href="pages/html-css.html">Watch &nbsp; <i class="ion-md-arrow-forward"></i></a>
+            <button class="btn-watch">
+              Watch &nbsp; <i class="ion-md-arrow-forward"></i>
             </button>
           </div>
           <img
