--- a/pages/html-css.html
+++ b/pages/html-css.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="html-css.css" />
+    <link rel="stylesheet" href="../resources/css/style.css" />
     <title>HTMLCSS Design</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="cube-section">
+      <div class="cube">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <h1>Under Construction</h1>
-</body>
+    <h3>oops sorry</h3>
+  </body>
 </html>
